--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,11 @@
-scikit-learn==1.5.2
-pandas
+numpy==1.26.4
+python-dateutil==2.9.0.post0
+six==1.17.0
+pytz==2024.2
+tzdata==2024.2
+packaging==24.2
+joblib==1.4.2
+scipy==1.11.4
+threadpoolctl==3.5.0
+pandas==2.1.4
+scikit-learn==1.5.0
